Práctica 3/src/y.output
State 11 conflicts: 8 shift/reduce
State 27 conflicts: 9 shift/reduce
State 106 conflicts: 8 shift/reduce
State 108 conflicts: 8 shift/reduce
State 136 conflicts: 1 shift/reduce
State 150 conflicts: 8 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: PRINCIPAL bloque

    2 bloque: INI_BLOQUE declar_de_variables_locales declar_de_subprogs sentencias FIN_BLOQUE

    3 declar_de_subprogs: declar_de_subprogs declar_subprog
    4                   | %empty

    5 declar_subprog: cabecera_subprograma bloque

    6 declar_de_variables_locales: INI_VAR_LOCAL variables_locales FIN_VAR_LOCAL
    7                            | %empty

    8 variables_locales: variables_locales cuerpo_declar_variables
    9                  | cuerpo_declar_variables

   10 cuerpo_declar_variables: TIPO_BASICO lista_variables PUNTO_Y_COMA

   11 cabecera_subprograma: TIPO_BASICO variable PARENT_IZQUIERDO lista_parametros PARENT_DERECHO
   12                     | TIPO_BASICO variable PARENT_IZQUIERDO PARENT_DERECHO

   13 sentencias: sentencias sentencia
   14           | sentencia

   15 sentencia: bloque
   16          | sentencia_asignacion
   17          | sentencia_si
   18          | sentencia_mientras
   19          | sentencia_entrada
   20          | sentencia_salida
   21          | sentencia_devolver
   22          | sentencia_hacer_hasta
   23          | %empty

   24 sentencia_asignacion: var_array ASIGNACION expresion PUNTO_Y_COMA

   25 sentencia_si: SI PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia
   26             | SI PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia SI_NO sentencia

   27 sentencia_hacer_hasta: HACER sentencia HASTA PARENT_IZQUIERDO expresion PARENT_DERECHO

   28 sentencia_mientras: MIENTRAS PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia

   29 sentencia_entrada: ENTRADA CADENA PUNTO_Y_COMA
   30                  | ENTRADA CADENA COMA lista_variables PUNTO_Y_COMA

   31 sentencia_salida: SALIDA lista_expresiones_o_cadena PUNTO_Y_COMA

   32 sentencia_devolver: DEVOLVER expresion PUNTO_Y_COMA

   33 expresion: PARENT_IZQUIERDO expresion PARENT_DERECHO
   34          | OP_UNARIO expresion
   35          | constante
   36          | funcion
   37          | IDENTIFICADOR
   38          | expresion OPSIGNO expresion
   39          | expresion OPMULTIPLICATIVO expresion
   40          | expresion OPIGUALDAD expresion
   41          | expresion OPRELACION expresion
   42          | expresion OPAND expresion
   43          | expresion OPOR expresion

   44 lista_variables: lista_variables COMA var_array
   45                | var_array

   46 variable: IDENTIFICADOR
   47         | IDENTIFICADOR INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ
   48         | IDENTIFICADOR INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ INI_DIM_MATRIZ CONST_ENTERO_SIN_SIGNO FIN_DIM_MATRIZ

   49 var_array: IDENTIFICADOR
   50          | IDENTIFICADOR INI_DIM_MATRIZ expresion FIN_DIM_MATRIZ
   51          | IDENTIFICADOR INI_DIM_MATRIZ expresion COMA expresion FIN_DIM_MATRIZ

   52 lista_parametros: lista_parametros COMA TIPO_BASICO variable
   53                 | TIPO_BASICO variable

   54 lista_entero: lista_entero COMA const_entero
   55             | const_entero

   56 lista_booleano: lista_booleano COMA CONST_LOGICA
   57               | CONST_LOGICA

   58 lista_flotante: lista_flotante COMA CONST_FLOTANTE
   59               | CONST_FLOTANTE

   60 lista_caracter: lista_caracter COMA CONST_CARACTER
   61               | CONST_CARACTER

   62 lista_expresiones_o_cadena: lista_expresiones_o_cadena COMA expresion
   63                           | lista_expresiones_o_cadena COMA CADENA
   64                           | expresion
   65                           | CADENA

   66 constante: const_entero
   67          | CONST_ENTERO_SIN_SIGNO
   68          | const_matriz
   69          | CONST_LOGICA
   70          | CONST_FLOTANTE
   71          | const_flotante_sin_signo
   72          | CONST_CARACTER

   73 funcion: IDENTIFICADOR PARENT_IZQUIERDO lista_expresiones_o_cadena PARENT_DERECHO
   74        | IDENTIFICADOR PARENT_IZQUIERDO PARENT_DERECHO

   75 const_entero: OPSIGNO CONST_ENTERO_SIN_SIGNO

   76 const_matriz: matriz_entero
   77             | matriz_booleano
   78             | matriz_flotante
   79             | matriz_caracter

   80 matriz_entero: INI_BLOQUE lista_entero FIN_BLOQUE

   81 matriz_booleano: INI_BLOQUE lista_booleano FIN_BLOQUE

   82 matriz_flotante: INI_BLOQUE lista_flotante FIN_BLOQUE

   83 matriz_caracter: INI_BLOQUE lista_caracter FIN_BLOQUE

   84 const_flotante_sin_signo: CONST_ENTERO_SIN_SIGNO PUNTO CONST_ENTERO_SIN_SIGNO


Terminals, with rules where they appear

$end (0) 0
error (256)
OPOR (258) 43
OPAND (259) 42
OPIGUALDAD (260) 40
OPRELACION (261) 41
OPSIGNO (262) 38 75
OPMULTIPLICATIVO (263) 39
OP_UNARIO (264) 34
PRINCIPAL (265) 1
INI_BLOQUE (266) 2 80 81 82 83
FIN_BLOQUE (267) 2 80 81 82 83
PUNTO_Y_COMA (268) 10 24 29 30 31 32
COMA (269) 30 44 51 52 54 56 58 60 62 63
PARENT_IZQUIERDO (270) 11 12 25 26 27 28 33 73 74
PARENT_DERECHO (271) 11 12 25 26 27 28 33 73 74
INI_VAR_LOCAL (272) 6
FIN_VAR_LOCAL (273) 6
ASIGNACION (274) 24
INI_DIM_MATRIZ (275) 47 48 50 51
FIN_DIM_MATRIZ (276) 47 48 50 51
SI (277) 25 26
SI_NO (278) 26
HACER (279) 27
HASTA (280) 27
MIENTRAS (281) 28
DEVOLVER (282) 32
TIPO_BASICO (283) 10 11 12 52 53
ENTRADA (284) 29 30
SALIDA (285) 31
CONST_LOGICA (286) 56 57 69
CADENA (287) 29 30 63 65
CONST_ENTERO_SIN_SIGNO (288) 47 48 67 75 84
CONST_FLOTANTE (289) 58 59 70
CONST_CARACTER (290) 60 61 72
IDENTIFICADOR (291) 37 46 47 48 49 50 51 73 74
PUNTO (292) 84


Nonterminals, with rules where they appear

$accept (38)
    on left: 0
programa (39)
    on left: 1, on right: 0
bloque (40)
    on left: 2, on right: 1 5 15
declar_de_subprogs (41)
    on left: 3 4, on right: 2 3
declar_subprog (42)
    on left: 5, on right: 3
declar_de_variables_locales (43)
    on left: 6 7, on right: 2
variables_locales (44)
    on left: 8 9, on right: 6 8
cuerpo_declar_variables (45)
    on left: 10, on right: 8 9
cabecera_subprograma (46)
    on left: 11 12, on right: 5
sentencias (47)
    on left: 13 14, on right: 2 13
sentencia (48)
    on left: 15 16 17 18 19 20 21 22 23, on right: 13 14 25 26 27 28
sentencia_asignacion (49)
    on left: 24, on right: 16
sentencia_si (50)
    on left: 25 26, on right: 17
sentencia_hacer_hasta (51)
    on left: 27, on right: 22
sentencia_mientras (52)
    on left: 28, on right: 18
sentencia_entrada (53)
    on left: 29 30, on right: 19
sentencia_salida (54)
    on left: 31, on right: 20
sentencia_devolver (55)
    on left: 32, on right: 21
expresion (56)
    on left: 33 34 35 36 37 38 39 40 41 42 43, on right: 24 25 26 27
    28 32 33 34 38 39 40 41 42 43 50 51 62 64
lista_variables (57)
    on left: 44 45, on right: 10 30 44
variable (58)
    on left: 46 47 48, on right: 11 12 52 53
var_array (59)
    on left: 49 50 51, on right: 24 44 45
lista_parametros (60)
    on left: 52 53, on right: 11 52
lista_entero (61)
    on left: 54 55, on right: 54 80
lista_booleano (62)
    on left: 56 57, on right: 56 81
lista_flotante (63)
    on left: 58 59, on right: 58 82
lista_caracter (64)
    on left: 60 61, on right: 60 83
lista_expresiones_o_cadena (65)
    on left: 62 63 64 65, on right: 31 62 63 73
constante (66)
    on left: 66 67 68 69 70 71 72, on right: 35
funcion (67)
    on left: 73 74, on right: 36
const_entero (68)
    on left: 75, on right: 54 55 66
const_matriz (69)
    on left: 76 77 78 79, on right: 68
matriz_entero (70)
    on left: 80, on right: 76
matriz_booleano (71)
    on left: 81, on right: 77
matriz_flotante (72)
    on left: 82, on right: 78
matriz_caracter (73)
    on left: 83, on right: 79
const_flotante_sin_signo (74)
    on left: 84, on right: 71


State 0

    0 $accept: . programa $end

    PRINCIPAL  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: PRINCIPAL . bloque

    INI_BLOQUE  shift, and go to state 3

    bloque  go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 bloque: INI_BLOQUE . declar_de_variables_locales declar_de_subprogs sentencias FIN_BLOQUE

    INI_VAR_LOCAL  shift, and go to state 6

    $default  reduce using rule 7 (declar_de_variables_locales)

    declar_de_variables_locales  go to state 7


State 4

    1 programa: PRINCIPAL bloque .

    $default  reduce using rule 1 (programa)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    6 declar_de_variables_locales: INI_VAR_LOCAL . variables_locales FIN_VAR_LOCAL

    TIPO_BASICO  shift, and go to state 8

    variables_locales        go to state 9
    cuerpo_declar_variables  go to state 10


State 7

    2 bloque: INI_BLOQUE declar_de_variables_locales . declar_de_subprogs sentencias FIN_BLOQUE

    $default  reduce using rule 4 (declar_de_subprogs)

    declar_de_subprogs  go to state 11


State 8

   10 cuerpo_declar_variables: TIPO_BASICO . lista_variables PUNTO_Y_COMA

    IDENTIFICADOR  shift, and go to state 12

    lista_variables  go to state 13
    var_array        go to state 14


State 9

    6 declar_de_variables_locales: INI_VAR_LOCAL variables_locales . FIN_VAR_LOCAL
    8 variables_locales: variables_locales . cuerpo_declar_variables

    FIN_VAR_LOCAL  shift, and go to state 15
    TIPO_BASICO    shift, and go to state 8

    cuerpo_declar_variables  go to state 16


State 10

    9 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 9 (variables_locales)


State 11

    2 bloque: INI_BLOQUE declar_de_variables_locales declar_de_subprogs . sentencias FIN_BLOQUE
    3 declar_de_subprogs: declar_de_subprogs . declar_subprog

    INI_BLOQUE     shift, and go to state 3
    SI             shift, and go to state 17
    HACER          shift, and go to state 18
    MIENTRAS       shift, and go to state 19
    DEVOLVER       shift, and go to state 20
    TIPO_BASICO    shift, and go to state 21
    ENTRADA        shift, and go to state 22
    SALIDA         shift, and go to state 23
    IDENTIFICADOR  shift, and go to state 12

    INI_BLOQUE     [reduce using rule 23 (sentencia)]
    SI             [reduce using rule 23 (sentencia)]
    HACER          [reduce using rule 23 (sentencia)]
    MIENTRAS       [reduce using rule 23 (sentencia)]
    DEVOLVER       [reduce using rule 23 (sentencia)]
    ENTRADA        [reduce using rule 23 (sentencia)]
    SALIDA         [reduce using rule 23 (sentencia)]
    IDENTIFICADOR  [reduce using rule 23 (sentencia)]
    $default       reduce using rule 23 (sentencia)

    bloque                 go to state 24
    declar_subprog         go to state 25
    cabecera_subprograma   go to state 26
    sentencias             go to state 27
    sentencia              go to state 28
    sentencia_asignacion   go to state 29
    sentencia_si           go to state 30
    sentencia_hacer_hasta  go to state 31
    sentencia_mientras     go to state 32
    sentencia_entrada      go to state 33
    sentencia_salida       go to state 34
    sentencia_devolver     go to state 35
    var_array              go to state 36


State 12

   49 var_array: IDENTIFICADOR .
   50          | IDENTIFICADOR . INI_DIM_MATRIZ expresion FIN_DIM_MATRIZ
   51          | IDENTIFICADOR . INI_DIM_MATRIZ expresion COMA expresion FIN_DIM_MATRIZ

    INI_DIM_MATRIZ  shift, and go to state 37

    $default  reduce using rule 49 (var_array)


State 13

   10 cuerpo_declar_variables: TIPO_BASICO lista_variables . PUNTO_Y_COMA
   44 lista_variables: lista_variables . COMA var_array

    PUNTO_Y_COMA  shift, and go to state 38
    COMA          shift, and go to state 39


State 14

   45 lista_variables: var_array .

    $default  reduce using rule 45 (lista_variables)


State 15

    6 declar_de_variables_locales: INI_VAR_LOCAL variables_locales FIN_VAR_LOCAL .

    $default  reduce using rule 6 (declar_de_variables_locales)


State 16

    8 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 8 (variables_locales)


State 17

   25 sentencia_si: SI . PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia
   26             | SI . PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia SI_NO sentencia

    PARENT_IZQUIERDO  shift, and go to state 40


State 18

   27 sentencia_hacer_hasta: HACER . sentencia HASTA PARENT_IZQUIERDO expresion PARENT_DERECHO

    INI_BLOQUE     shift, and go to state 3
    SI             shift, and go to state 17
    HACER          shift, and go to state 18
    MIENTRAS       shift, and go to state 19
    DEVOLVER       shift, and go to state 20
    ENTRADA        shift, and go to state 22
    SALIDA         shift, and go to state 23
    IDENTIFICADOR  shift, and go to state 12

    $default  reduce using rule 23 (sentencia)

    bloque                 go to state 24
    sentencia              go to state 41
    sentencia_asignacion   go to state 29
    sentencia_si           go to state 30
    sentencia_hacer_hasta  go to state 31
    sentencia_mientras     go to state 32
    sentencia_entrada      go to state 33
    sentencia_salida       go to state 34
    sentencia_devolver     go to state 35
    var_array              go to state 36


State 19

   28 sentencia_mientras: MIENTRAS . PARENT_IZQUIERDO expresion PARENT_DERECHO sentencia

    PARENT_IZQUIERDO  shift, and go to state 42


State 20

   32 sentencia_devolver: DEVOLVER . expresion PUNTO_Y_COMA

    OPSIGNO                 shift, and go to state 43
    OP_UNARIO               shift, and go to state 44
    INI_BLOQUE              shift, and go to state 45
    PARENT_IZQUIERDO        shift, and go to state 46
    CONST_LOGICA            shift, and go to state 47
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 48
    CONST_FLOTANTE          shift, and go to state 49
    CONST_CARACTER          shift, and go to state 50
    IDENTIFICADOR           shift, and go to state 51

    expresion                 go to state 52
    constante                 go to state 53
    funcion                   go to state 54
    const_entero              go to state 55
    const_matriz              go to state 56
    matriz_entero             go to state 57
    matriz_booleano           go to state 58
    matriz_flotante           go to state 59
    matriz_caracter           go to state 60
    const_flotante_sin_signo  go to state 61


State 21

   11 cabecera_subprograma: TIPO_BASICO . variable PARENT_IZQUIERDO lista_parametros PARENT_DERECHO
   12                     | TIPO_BASICO . variable PARENT_IZQUIERDO PARENT_DERECHO

    IDENTIFICADOR  shift, and go to state 62

    variable  go to state 63


State 22

   29 sentencia_entrada: ENTRADA . CADENA PUNTO_Y_COMA
   30                  | ENTRADA . CADENA COMA lista_variables PUNTO_Y_COMA

    CADENA  shift, and go to state 64


State 23

   31 sentencia_salida: SALIDA . lista_expresiones_o_cadena PUNTO_Y_COMA

    OPSIGNO                 shift, and go to state 43
    OP_UNARIO               shift, and go to state 44
    INI_BLOQUE              shift, and go to state 45
    PARENT_IZQUIERDO        shift, and go to state 46
    CONST_LOGICA            shift, and go to state 47
    CADENA                  shift, and go to state 65
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 48
    CONST_FLOTANTE          shift, and go to state 49
    CONST_CARACTER          shift, and go to state 50
    IDENTIFICADOR           shift, and go to state 51

    expresion                   go to state 66
    lista_expresiones_o_cadena  go to state 67
    constante                   go to state 53
    funcion                     go to state 54
    const_entero                go to state 55
    const_matriz                go to state 56
    matriz_entero               go to state 57
    matriz_booleano             go to state 58
    matriz_flotante             go to state 59
    matriz_caracter             go to state 60
    const_flotante_sin_signo    go to state 61


State 24

   15 sentencia: bloque .

    $default  reduce using rule 15 (sentencia)


State 25

    3 declar_de_subprogs: declar_de_subprogs declar_subprog .

    $default  reduce using rule 3 (declar_de_subprogs)


State 26

    5 declar_subprog: cabecera_subprograma . bloque

    INI_BLOQUE  shift, and go to state 3

    bloque  go to state 68


State 27

    2 bloque: INI_BLOQUE declar_de_variables_locales declar_de_subprogs sentencias . FIN_BLOQUE
   13 sentencias: sentencias . sentencia

    INI_BLOQUE     shift, and go to state 3
    FIN_BLOQUE     shift, and go to state 69
    SI             shift, and go to state 17
    HACER          shift, and go to state 18
    MIENTRAS       shift, and go to state 19
    DEVOLVER       shift, and go to state 20
    ENTRADA        shift, and go to state 22
    SALIDA         shift, and go to state 23
    IDENTIFICADOR  shift, and go to state 12

    INI_BLOQUE     [reduce using rule 23 (sentencia)]
    FIN_BLOQUE     [reduce using rule 23 (sentencia)]
    SI             [reduce using rule 23 (sentencia)]
    HACER          [reduce using rule 23 (sentencia)]
    MIENTRAS       [reduce using rule 23 (sentencia)]
    DEVOLVER       [reduce using rule 23 (sentencia)]
    ENTRADA        [reduce using rule 23 (sentencia)]
    SALIDA         [reduce using rule 23 (sentencia)]
    IDENTIFICADOR  [reduce using rule 23 (sentencia)]

    bloque                 go to state 24
    sentencia              go to state 70
    sentencia_asignacion   go to state 29
    sentencia_si           go to state 30
    sentencia_hacer_hasta  go to state 31
    sentencia_mientras     go to state 32
    sentencia_entrada      go to state 33
    sentencia_salida       go to state 34
    sentencia_devolver     go to state 35
    var_array              go to state 36


State 28

   14 sentencias: sentencia .

    $default  reduce using rule 14 (sentencias)


State 29

   16 sentencia: sentencia_asignacion .

    $default  reduce using rule 16 (sentencia)


State 30

   17 sentencia: sentencia_si .

    $default  reduce using rule 17 (sentencia)


State 31

   22 sentencia: sentencia_hacer_hasta .

    $default  reduce using rule 22 (sentencia)


State 32

   18 sentencia: sentencia_mientras .

    $default  reduce using rule 18 (sentencia)


State 33

   19 sentencia: sentencia_entrada .

    $default  reduce using rule 19 (sentencia)


State 34

   20 sentencia: sentencia_salida .

    $default  reduce using rule 20 (sentencia)


State 35

   21 sentencia: sentencia_devolver .

    $default  reduce using rule 21 (sentencia)


State 36

   24 sentencia_asignacion: var_array . ASIGNACION expresion PUNTO_Y_COMA

    ASIGNACION  shift, and go to state 71


State 37

   50 var_array: IDENTIFICADOR INI_DIM_MATRIZ . expresion FIN_DIM_MATRIZ
   51          | IDENTIFICADOR INI_DIM_MATRIZ . expresion COMA expresion FIN_DIM_MATRIZ

    OPSIGNO                 shift, and go to state 43
    OP_UNARIO               shift, and go to state 44
    INI_BLOQUE              shift, and go to state 45
    PARENT_IZQUIERDO        shift, and go to state 46
    CONST_LOGICA            shift, and go to state 47
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 48
    CONST_FLOTANTE          shift, and go to state 49
    CONST_CARACTER          shift, and go to state 50
    IDENTIFICADOR           shift, and go to state 51

    expresion                 go to state 72
    constante                 go to state 53
    funcion                   go to state 54
    const_entero              go to state 55
    const_matriz              go to state 56
    matriz_entero             go to state 57
    matriz_booleano           go to state 58
    matriz_flotante           go to state 59
    matriz_caracter           go to state 60
    const_flotante_sin_signo  go to state 61


State 38

   10 cuerpo_declar_variables: TIPO_BASICO lista_variables PUNTO_Y_COMA .

    $default  reduce using rule 10 (cuerpo_declar_variables)


State 39

   44 lista_variables: lista_variables COMA . var_array

    IDENTIFICADOR  shift, and go to state 12

    var_array  go to state 73


State 40

   25 sentencia_si: SI PARENT_IZQUIERDO . expresion PARENT_DERECHO sentencia
   26             | SI PARENT_IZQUIERDO . expresion PARENT_DERECHO sentencia SI_NO sentencia

    OPSIGNO                 shift, and go to state 43
    OP_UNARIO               shift, and go to state 44
    INI_BLOQUE              shift, and go to state 45
    PARENT_IZQUIERDO        shift, and go to state 46
    CONST_LOGICA            shift, and go to state 47
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 48
    CONST_FLOTANTE          shift, and go to state 49
    CONST_CARACTER          shift, and go to state 50
    IDENTIFICADOR           shift, and go to state 51

    expresion                 go to state 74
    constante                 go to state 53
    funcion                   go to state 54
    const_entero              go to state 55
    const_matriz              go to state 56
    matriz_entero             go to state 57
    matriz_booleano           go to state 58
    matriz_flotante           go to state 59
    matriz_caracter           go to state 60
    const_flotante_sin_signo  go to state 61


State 41

   27 sentencia_hacer_hasta: HACER sentencia . HASTA PARENT_IZQUIERDO expresion PARENT_DERECHO

    HASTA  shift, and go to state 75


State 42

   28 sentencia_mientras: MIENTRAS PARENT_IZQUIERDO . expresion PARENT_DERECHO sentencia

    OPSIGNO                 shift, and go to state 43
    OP_UNARIO               shift, and go to state 44
    INI_BLOQUE              shift, and go to state 45
    PARENT_IZQUIERDO        shift, and go to state 46
    CONST_LOGICA            shift, and go to state 47
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 48
    CONST_FLOTANTE          shift, and go to state 49
    CONST_CARACTER          shift, and go to state 50
    IDENTIFICADOR           shift, and go to state 51

    expresion                 go to state 76
    constante                 go to state 53
    funcion                   go to state 54
    const_entero              go to state 55
    const_matriz              go to state 56
    matriz_entero             go to state 57
    matriz_booleano           go to state 58
    matriz_flotante           go to state 59
    matriz_caracter           go to state 60
    const_flotante_sin_signo  go to state 61


State 43

   75 const_entero: OPSIGNO . CONST_ENTERO_SIN_SIGNO

    CONST_ENTERO_SIN_SIGNO  shift, and go to state 77


State 44

   34 expresion: OP_UNARIO . expresion

    OPSIGNO                 shift, and go to state 43
    OP_UNARIO               shift, and go to state 44
    INI_BLOQUE              shift, and go to state 45
    PARENT_IZQUIERDO        shift, and go to state 46
    CONST_LOGICA            shift, and go to state 47
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 48
    CONST_FLOTANTE          shift, and go to state 49
    CONST_CARACTER          shift, and go to state 50
    IDENTIFICADOR           shift, and go to state 51

    expresion                 go to state 78
    constante                 go to state 53
    funcion                   go to state 54
    const_entero              go to state 55
    const_matriz              go to state 56
    matriz_entero             go to state 57
    matriz_booleano           go to state 58
    matriz_flotante           go to state 59
    matriz_caracter           go to state 60
    const_flotante_sin_signo  go to state 61


State 45

   80 matriz_entero: INI_BLOQUE . lista_entero FIN_BLOQUE
   81 matriz_booleano: INI_BLOQUE . lista_booleano FIN_BLOQUE
   82 matriz_flotante: INI_BLOQUE . lista_flotante FIN_BLOQUE
   83 matriz_caracter: INI_BLOQUE . lista_caracter FIN_BLOQUE

    OPSIGNO         shift, and go to state 43
    CONST_LOGICA    shift, and go to state 79
    CONST_FLOTANTE  shift, and go to state 80
    CONST_CARACTER  shift, and go to state 81

    lista_entero    go to state 82
    lista_booleano  go to state 83
    lista_flotante  go to state 84
    lista_caracter  go to state 85
    const_entero    go to state 86


State 46

   33 expresion: PARENT_IZQUIERDO . expresion PARENT_DERECHO

    OPSIGNO                 shift, and go to state 43
    OP_UNARIO               shift, and go to state 44
    INI_BLOQUE              shift, and go to state 45
    PARENT_IZQUIERDO        shift, and go to state 46
    CONST_LOGICA            shift, and go to state 47
    CONST_ENTERO_SIN_SIGNO  shift, and go to state 48
    CONST_FLOTANTE          shift, and go to state 49
    CONST_CARACTER          shift, and go to state 50
    IDENTIFICADOR           shift, and go to state 51

    expresion                 go to state 87
    constante                 go to state 53
    funcion                   go to state 54
    const_entero              go to state 55
    const_matriz              go to state 56
    matriz_entero             go to state 57
    matriz_booleano           go to state 58
    matriz_flotante           go to state 59
    matriz_caracter           go to state 60
    const_flotante_sin_signo  go to state 61


State 47

   69 constante: CONST_LOGICA .

    $default  reduce using rule 69 (constante)


State 48

   67 constante: CONST_ENTERO_SIN_SIGNO .
   84 const_flotante_sin_signo: CONST_ENTERO_SIN_SIGNO . PUNTO CONST_ENTERO_SIN_SIGNO

    PUNTO  shift, and go to state 88

    $default  reduce using rule 67 (constante)


State 49

   70 constante: CONST_FLOTANTE .

    $default  reduce using rule 70 (constante)


State 50

   72 constante: CONST_CARACTER .

    $default  reduce using rule 72 (constante)


State 51

   37 expresion: IDENTIFICADOR .
   73 funcion: IDENTIFICADOR . PARENT_IZQUIERDO lista_expresiones_o_cadena PARENT_DERECHO
   74        | IDENTIFICADOR . PARENT_IZQUIERDO PARENT_DERECHO

    PARENT_IZQUIERDO  shift, and go to state 89

    $default  reduce using rule 37 (expresion)


State 52
